--- a/Front/global.css
+++ b/Front/global.css
@@ -1,166 +1,211 @@
 @font-face {
-    font-family: 'GlacialIndifference';
-    src: url('../assets/fuentes/GlacialIndifference-Regular.otf') format('opentype');
-    font-style: normal;
-    font-weight: normal;
+  font-family: "GlacialIndifference";
+  src: url("../assets/fuentes/GlacialIndifference-Regular.otf")
+    format("opentype");
+  font-style: normal;
+  font-weight: normal;
 }
-html { scroll-behavior: smooth; }
-
-body{
-    display:flex;
-    flex-direction: column;
-    margin: 0;
-    font-family: "GlacialIndifference";
+html {
+  scroll-behavior: smooth;
 }
 
-.contenedor-menu{
-    height: 110vh;
-    background-image: url("../assets/logos/Spysh-SePensoYSeHizo.png");
-    background-size: cover;
-    background-repeat: none;
-    background-position: center;    
+body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  font-family: "GlacialIndifference";
 }
 
-.contenedor-link{
-    display: flex;
-    justify-content: right;
-    padding: 10px;
-    gap: 40px;    
-    margin-top: 60px;
-    margin-right: 30px;
+.contenedor-menu {
+  height: 110vh;
+  background-image: url("../assets/logos/Spysh-SePensoYSeHizo.png");
+  background-size: cover;
+  background-repeat: none;
+  background-position: center;
 }
-.contenedor-link a{
-    padding: 15px;
-    text-decoration: none;
-    font-size: large;
-    border-radius: 3px;
-    color: #780036;
-    transition: 0.5s background-color ease;
+
+.contenedor-link {
+  display: flex;
+  justify-content: right;
+  padding: 10px;
+  gap: 40px;
+  margin-top: 60px;
+  margin-right: 30px;
 }
-.contenedor-link a:hover{
-    background-color: #f48c9e;
-    color: white;
+.contenedor-link a {
+  padding: 15px;
+  text-decoration: none;
+  font-size: large;
+  border-radius: 3px;
+  color: #780036;
+  transition: 0.5s background-color ease;
+}
+.contenedor-link a:hover {
+  background-color: #f48c9e;
+  color: white;
 }
 /*==================================================*/
 
-
 /* Section */
-.section{
-    margin-top: 20px;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.section {
+  margin-top: 20px;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 /* Section 1 */
 
 /*Contenedor de las Cards*/
-#section-1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#section-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /* Animaciones de aparición */
-.contenedor-card{
-    display: flex;
-    justify-content: center;  
-    align-items: center;
-    gap: 30px;  
-    width: 80%;
-    height: 80%;
+.contenedor-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 80%;
+  height: 80%;
 }
+
+/* Card */
 .card {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;    
-    border-radius: 5px;
-    box-shadow: 0px 3px 8px rgba(0,0,0,0.3);  
-    
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(to top, white 70%, #f48c9e 30%);
 
-    /*Fondo animado*/
-    background: linear-gradient(to top, white 70%,#f48c9e  30%);
-
-    /*Aparicion inicial*/
-    opacity: 0;
-    transform: translateY(50px); /* parte desde abajo */
-    filter: blur(5px);
-    transition: 
-        opacity 0.8s ease-out, 
-        transform 0.8s ease-out, 
-        filter 0.8s ease-out, 
-        
+  /*Aparicion inicial*/
+  opacity: 0;
+  transform: translateY(50px) scale(1); /* parte desde abajo */
+  filter: blur(5px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out,
+    filter 0.8s ease-out, box-shadow 0.4s ease;
 }
 
 /* Cuando es visible */
 .card.visible {
-    opacity: 1;
-    transform: translateY(0);
-    filter: blur(0);
+  opacity: 1;
+  transform: translateY(0) scale(1);
+  filter: blur(0);
 }
-.card.visible:hover{
-    box-shadow: 0px 4px 20px #00000061;  
-    
-    
+.card.visible:hover {
+  box-shadow: 0px 4px 15px #0000008f;
 }
+
+/*Configuracion Card 3*/
+
+#card-3 {
+  background-image: url("../assets/fondos/fondo_text_entretarjetas.png");
+  background-size: cover;
+  background-position: center;
+  flex-direction: row;
+  position: relative;
+  box-shadow: none;
+  transition-delay: 0.9s;
+}
+#card-3 p {
+  font-size: large;
+  text-align: center;
+  margin-top: 100px;
+  padding: 30px;
+}
+
 /*======== Contenido de la Card =========*/
-.contenedor-card .card #contenedor-imagen{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: end;
-    height: 50%;
-    width: 100%;
-    /*border: 1px solid black;*/
+.contenedor-card .card #contenedor-imagen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  height: 50%;
+  width: 100%;
+  /*border: 1px solid black;*/
 }
-.contenedor-card .card img{
-    width: 70%;
-    height: 90%;
-    border-radius: 100%;
+.contenedor-card .card img {
+  width: 70%;
+  height: 90%;
+  border-radius: 100%;
 }
-.contenedor-card .card #contenedor-h2{
-    width: 100%;
-    height: 15%;
-    text-align: center;
-    /*border: 1px solid black;*/
+.contenedor-card .card #contenedor-h2 {
+  width: 100%;
+  height: 15%;
+  text-align: center;
+  /*border: 1px solid black;*/
 }
-.contenedor-card .card h2{
-      color: #780036;
-      font-size: x-large;
+.contenedor-card .card h2 {
+  color: #780036;
+  font-size: 35px;
 }
-.contenedor-card .card #contenedor-h4{
-    width: 100%;
-    height: 15%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    /*border: 1px solid black;*/
+.contenedor-card .card #contenedor-h4 {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  /*border: 1px solid black;*/
 }
-.contenedor-card .card h4{
-    margin: 0;
-    color: rgb(135, 135, 135);
+.contenedor-card .card h4 {
+  margin: 0;
+  color: rgb(135, 135, 135);
+  font-size: 25px;
 }
-.contenedor-card .card #contenedor-button{
-    width: 100%;
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    /*border: 1px solid black;*/
+.contenedor-card .card #contenedor-button {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /*border: 1px solid black;*/
 }
-.contenedor-card .card button{
-    width: 40%;
-    height: 30%;
-    border-radius: 5px;
-    color: white;
-    background-color: #f48c9e;
-    border:none;
-    transition: 0.3s background-color ease;
+.contenedor-card .card button {
+  width: 40%;
+  height: 30%;
+  border-radius: 5px;
+  color: white;
+  font-size: large;
+  background-color: #f48c9e;
+  border: none;
+  transition: background-color 0.3s ease;
 }
-.contenedor-card .card button:hover{
-    background-color: #780036;
-    cursor: pointer;
+.contenedor-card .card button:hover {
+  background-color: #780036;
+  cursor: pointer;
 }
 
+.contenedor-galeriaSwiper_texto {
+  display: flex;
+  flex-direction: column;
+}
+#card-3 {
+  background-color: white;
+}
+/* Swipper Section */
 
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #444;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
